--- a/taste/package.json
+++ b/taste/package.json
@@ -16,5 +16,9 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^3.4.14",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@supabase/ssr": "^0.5.2",
+		"@supabase/supabase-js": "^2.46.1"
 	}
 }
