--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
 		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.49",
 		"svelte": "^5.0.0",
+		"sveltekit-superforms": "^2.20.1",
 		"tailwindcss": "^3.4.14",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.5.2",
